parser/src/test/resources/corpus/invalid/01_unmatched_brace.ff
rule "Unmatched Brace" {
  description: "missing closing brace"
